# HumosMutantes

./: CMakeLists.txt  README.md  humos_tilde.cpp
mi/: LICENSE
mi/clouds/: resources.cc  resources.h
mi/clouds/dsp/: audio_buffer.h  frame.h  grain.h  granular_processor.cc  granular_processor.h  granular_sample_player.h  looping_sample_player.h  parameters.h  random_oscillator.h  window.h  window.h.bak  wsola_sample_player.h
mi/clouds/dsp/fx/: oliverb.h  pitch_shifter.h
mi/clouds/resources/: lookup_tables.py
